welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:4: error: type mismatch;
 found   : Unit
 required: Int
                                 if (a<b) {return b}
                                 ^