welcome.lessons.welcome.bat.bool2.MaxMod5.scala.code
def maxMod5(a:Int, b:Int):Int = {if (a==b) {return 0}
                                 
                                 if ((a%5)==(b%5)) {if (a<b) {return a}}
                                 if (a<b) {return b}
                                }